--- a/style.css
+++ b/style.css
@@ -23,3 +23,12 @@ body{
     width: 20px;
     height: 20px;
 }
+.blok{
+    background-color: white;
+    width: 100%;
+    height: 60px;
+}
+#blok{
+    position: absolute;
+    bottom: 0;
+}
